Dev (#42)
- Rewrote Hexamaze

- Finished Logic

- Created a License

- Upgraded Gradle to 7.4